# rust-workshop

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
01-basic/: Cargo.toml  README.md
01-basic/src/: lib.rs  tests.rs
02-control/: Cargo.toml  README.md
02-control/src/: lib.rs  tests.rs
03-types/: Cargo.toml  README.md
03-types/src/: lib.rs  tests.rs
04-ownership/: Cargo.toml  README.md
04-ownership/src/: lib.rs  tests.rs
05-lifetime/: Cargo.toml  README.md
05-lifetime/src/: lib.rs  tests.rs
06-trait/: Cargo.toml  README.md
06-trait/src/: lib.rs  tests.rs
07-pattern_matching/: Cargo.toml  README.md
07-pattern_matching/src/: lib.rs  tests.rs
08-generics/: Cargo.toml  README.md
08-generics/src/: lib.rs  tests.rs
09-error_management/: Cargo.toml  README.md
09-error_management/src/: lib.rs  tests.rs
10-closure/: Cargo.toml
10-closure/src/: lib.rs  tests.rs
10-collections/: Cargo.toml  README.md
10-collections/src/: lib.rs
11-collections/: Cargo.toml
11-collections/src/: lib.rs  tests.rs
11-parallelism/: Cargo.toml
11-parallelism/src/: lib.rs  tests.rs
12-parallelism/: Cargo.toml
12-parallelism/src/: lib.rs
13-memory/: Cargo.toml
13-memory/src/: lib.rs  tests.rs
14-challenge/: Cargo.toml
14-challenge/src/: lib.rs
99-challenge/: Cargo.toml
99-challenge/src/: lib.rs
css/: reveal.css  reveal.scss
rustdoc/: index.html  search-index.js
rustdoc/00_workshop/: index.html
slides/: install.md  instructions.md  title.md
solutions/: Cargo.toml
src/: lib.rs  main.rs
(+48 files in other folders)
